#6. add links to travis and dockerhub to documentation

--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,10 @@
 = vuzoll-ingest-vk-data
 
-Microservice for ingesting Vk data.
+Microservice for generating exploration reports from vk data.
+
+TravisCI - https://travis-ci.org/vuzoll/vuzoll-ingest-vk-data/
+
+DockerHub - https://hub.docker.com/r/vuzoll/vuzoll-ingest-vk-data/
 
 == HOWTO: start with docker
 
