--- a/README.adoc
+++ b/README.adoc
@@ -16,27 +16,9 @@ docker ps # to determine if container is already running
 docker kill $CONTAINER_ID # if needed
 
 docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
-docker run -dit -v /data:/data -e "$CONFIG" vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
+docker run -dit -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
 ----
-
-You can configure following parameters:
-
-VK_INGEST_START_NODE - starting node for ingestion (Vlad by default)
-
-VK_INGEST_EXECUTION_STATE_FILE - path to file to store ingestion execution state (/data/ingest-vk-data.state by default)
-
-VK_INGEST_OUTPUT_FILE - path to file to store ingested data (/data/vk.data by default)
-
-VK_INGEST_TIME_LIMIT - time limitation on ingestion process (no limit by default)
-
-VK_INGEST_DATASET_SIZE - data set size limitation on ingestion process (no limit by default)
 
 == HOWTO: check that service is up
 
-[source,shell]
-----
-ls /data
-wc /data/*
-tail /data/vk.data
-tail /data/ingest-vk-data.state
-----
+POST to http://138.68.145.93:8080/ingest
