--- a/README.adoc
+++ b/README.adoc
@@ -11,12 +11,13 @@ DockerHub - https://hub.docker.com/r/vuzoll/vuzoll-ingest-vk-data/
 [source,shell]
 ----
 mkdir /data
+mkdir /logs
 
 docker ps # to determine if container is already running
 docker kill $CONTAINER_ID # if needed
 
 docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
-docker run -dit -v /data:/data -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
+docker run -dit -v /data:/data -v /logs:/logs -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
 ----
 
 == HOWTO: run service
