--- a/src/docs/vk-profile-fields.adoc
+++ b/src/docs/vk-profile-fields.adoc
@@ -161,7 +161,7 @@ a|информация о карьере пользователя. Объект,
 * position (string) — должность
 |career information
 |yes
-|fields 'company' and 'city_name' are missing in SDK
+|field 'company' is missing in SDK
 |
 
 |city
