--- a/README.adoc
+++ b/README.adoc
@@ -1,56 +1,7 @@
 = vuzoll-ingest-vk-data
 
-Microservice for generating exploration reports from vk data.
+include::src/docs/vuzoll-ingest-vk-data.adoc[]
 
-TravisCI - https://travis-ci.org/vuzoll/vuzoll-ingest-vk-data/
+include::src/docs/howto-start-docker.adoc[]
 
-DockerHub - https://hub.docker.com/r/vuzoll/vuzoll-ingest-vk-data/
-
-== HOWTO: start with docker
-
-[source,shell]
-----
-mkdir /data
-mkdir /logs
-
-docker ps # to determine if container is already running
-docker kill $CONTAINER_ID # if needed
-docker rm vuzoll_ingest_vk_data # if needed
-
-docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
-docker run -dit --name vuzoll_ingest_vk_data -v /data:/data -v /logs:/logs -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
-----
-
-If you want to authorize your VK API access to be able to ingest secured data do the following:
-
-- Go to https://oauth.vk.com/authorize?client_id=5763182&scope=friends,offline&redirect_uri=https://oauth.vk.com/blank.html&display=page&response_type=token
-- You will be redirected to URL like https://oauth.vk.com/blank.html#access_token=ACCESS_TOKEN&expires_in=0&user_id=USER_ID
-- Copy ACCESS_TOKEN and USER_ID values
-- Use following docker config command to start
-
-[source,shell]
-----
-docker run -dit --name vuzoll_ingest_vk_data -v /data:/data -v /logs:/logs -e INGEST_VK_ACCESS_TOKEN=ACCESS_ID -e INGEST_VK_USER_ID=USER_ID -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
-----
-
-== HOWTO: run service
-
-POST to http://138.68.145.93:8080/ingest/bfs
-
-Following constaints are avaiable for POST body:
-
-[source]
-----
-{
-  "seedId": ?,
-  "timeLimit": ?, // like '1h28min17sec'
-  "ingestedLimit": ?,
-  "dataSizeLimit": 300
-}
-----
-
-Following environment variable are avaiable for global service configuration:
-
-INGEST_VK_DATA_FILE_PATH - path to data file (default is /data/vk.data)
-
-INGEST_VK_DEFAULT_SEED_ID - initial vk id to use if data file is empty
+include::src/docs/howto-run-service.adoc[]
