--- a/src/docs/howto-start-docker.adoc
+++ b/src/docs/howto-start-docker.adoc
@@ -1,6 +1,6 @@
-== HOWTO: start service as docker container
+= HOWTO: start service as docker container
 
-=== Environment preparations
+== Environment preparations
 
 [source,shell]
 ----
@@ -8,7 +8,7 @@ mkdir /data
 mkdir /logs
 ----
 
-=== Cleaning previosly started container
+== Cleaning previosly started container
 
 [source,shell]
 ----
@@ -17,7 +17,7 @@ docker kill $CONTAINER_ID # if needed
 docker rm vuzoll_ingest_vk_data # if needed
 ----
 
-=== Configuration parameters
+== Configuration parameters
 
 Following environment variable are available for global service configuration:
 
@@ -25,7 +25,7 @@ INGEST_VK_DATA_FILE_PATH - path to data file (default is /data/vk.data)
 
 INGEST_VK_DEFAULT_SEED_ID - initial vk id to use if data file is empty
 
-=== Unauthorized start
+== Unauthorized start
 
 [source,shell]
 ----
@@ -33,7 +33,7 @@ docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
 docker run -dit --name vuzoll_ingest_vk_data -v /data:/data -v /logs:/logs -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
 ----
 
-=== Authorized start
+== Authorized start
 
 If you want to authorize your VK API access to be able to ingest secured data do the following:
 
