#12. initial mongodb application configuration

--- a/src/docs/howto-start-docker.adoc
+++ b/src/docs/howto-start-docker.adoc
@@ -25,12 +25,22 @@ INGEST_VK_DATA_FILE_PATH - path to data file (default is /data/vk.data)
 
 INGEST_VK_DEFAULT_SEED_ID - initial vk id to use if data file is empty
 
+INGEST_VK_MONGO_DATABASE_NAME - mongodb database name to use (default is vkIngested)
+
+INGEST_VK_MONGO_HOST - host of mongodb instance (default is vuzoll_mongo)
+
+INGEST_VK_MONGO_PORT - port of mongodb instance (default is 27017)
+
+INGEST_VK_MONGO_USERNAME - username for authentication to mongodb (default is vuzollAdmin)
+
+INGEST_VK_MONGO_PASSWORD - password for authentication to mongodb
+
 == Unauthorized start
 
 [source,shell]
 ----
 docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
-docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /data:/data -v /logs:/logs -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
+docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /data:/data -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
 ----
 
 == Authorized start
@@ -45,5 +55,5 @@ If you want to authorize your VK API access to be able to ingest secured data do
 [source,shell]
 ----
 docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
-docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /data:/data -v /logs:/logs -e INGEST_VK_ACCESS_TOKEN=ACCESS_ID -e INGEST_VK_USER_ID=USER_ID -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
+docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /data:/data -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -e INGEST_VK_ACCESS_TOKEN=ACCESS_ID -e INGEST_VK_USER_ID=USER_ID -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
 ----
