--- a/src/docs/howto-start-docker.adoc
+++ b/src/docs/howto-start-docker.adoc
@@ -4,8 +4,7 @@
 
 [source,shell]
 ----
-mkdir /data
-mkdir /logs
+mkdir -p /logs
 ----
 
 == Cleaning previosly started container
@@ -21,8 +20,6 @@ docker rm vuzoll_ingest_vk_data # if needed
 
 Following environment variable are available for global service configuration:
 
-INGEST_VK_DATA_FILE_PATH - path to data file (default is /data/vk.data)
-
 INGEST_VK_DEFAULT_SEED_ID - initial vk id to use if data file is empty
 
 INGEST_VK_MONGO_DATABASE_NAME - mongodb database name to use (default is vkIngested)
@@ -31,7 +28,7 @@ INGEST_VK_MONGO_HOST - host of mongodb instance (default is vuzoll_mongo)
 
 INGEST_VK_MONGO_PORT - port of mongodb instance (default is 27017)
 
-INGEST_VK_MONGO_USERNAME - username for authentication to mongodb (default is vuzollAdmin)
+INGEST_VK_MONGO_USERNAME - username for authentication to mongodb (default is ingestVkService)
 
 INGEST_VK_MONGO_PASSWORD - password for authentication to mongodb
 
@@ -40,7 +37,7 @@ INGEST_VK_MONGO_PASSWORD - password for authentication to mongodb
 [source,shell]
 ----
 docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
-docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /data:/data -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
+docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
 ----
 
 == Authorized start
@@ -55,5 +52,5 @@ If you want to authorize your VK API access to be able to ingest secured data do
 [source,shell]
 ----
 docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
-docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /data:/data -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -e INGEST_VK_ACCESS_TOKEN=ACCESS_ID -e INGEST_VK_USER_ID=USER_ID -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
+docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -e INGEST_VK_ACCESS_TOKEN=ACCESS_ID -e INGEST_VK_USER_ID=USER_ID -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
 ----
