--- a/src/docs/howto-start-docker.adoc
+++ b/src/docs/howto-start-docker.adoc
@@ -34,6 +34,10 @@ INGEST_VK_MONGO_USERNAME - username for authentication to mongodb (default is in
 
 INGEST_VK_MONGO_PASSWORD - password for authentication to mongodb
 
+INGEST_VK_ROOT_LOG_LEVEL - logging level for third-party libraries (default is INFO)
+
+INGEST_VK_VUZOLL_LOG_LEVEL - logging level for service code (default is INFO)
+
 == Unauthorized start
 
 [source,shell]
