#12. update documentation with latest api changes

--- a/src/docs/howto-run-service.adoc
+++ b/src/docs/howto-run-service.adoc
@@ -1,15 +1,18 @@
 = HOWTO: run service
 
-POST to http://138.68.145.93:8080/ingest/bfs
+POST to http://138.68.145.93:8080/ingest
 
-Following constraints are available for POST body:
+Following parameters are available for POST body:
 
 [source]
 ----
 {
-  "seedId": 123456789,
+  "method": "randomized-bfs",
   "timeLimit": '1h28min17sec',
   "ingestedLimit": 300,
-  "dataSizeLimit": 300
+  "dataSizeLimit": 300,
+  "parameters": {
+    "seedId": 123456789,
+  }
 }
 ----
