#52. implement possibility to run regular bfs

--- a/src/docs/howto-run-service.adoc
+++ b/src/docs/howto-run-service.adoc
@@ -9,7 +9,7 @@ Following parameters are available for POST body:
 [source]
 ----
 {
-  "method": "randomized-bfs",
+  "method": "bfs|randomized-bfs",
   "timeLimit": '1h28min17sec',
   "ingestedLimit": 300,
   "dataSizeLimit": 300,
