--- a/src/docs/howto-start-docker.adoc
+++ b/src/docs/howto-start-docker.adoc
@@ -1,12 +1,5 @@
 = HOWTO: start service as docker container
 
-== Environment preparations
-
-[source,shell]
-----
-mkdir -p /logs
-----
-
 == Cleaning previosly started container
 
 [source,shell]
@@ -43,8 +36,8 @@ INGEST_VK_VUZOLL_LOG_LEVEL - logging level for service code (default is INFO)
 
 [source,shell]
 ----
-docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
-docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG # to start specific image
+docker pull vuzoll/vuzoll-ingest-vk-data:$TAG
+docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
 ----
 
 == Authorized start
@@ -58,6 +51,6 @@ If you want to authorize your VK API access to be able to ingest secured data do
 
 [source,shell]
 ----
-docker pull vuzoll/vuzoll-ingest-vk-data:$TAG # to load specific image
+docker pull vuzoll/vuzoll-ingest-vk-data:$TAG
 docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -e INGEST_VK_ACCESS_TOKEN=ACCESS_ID -e INGEST_VK_USER_ID=USER_ID -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
 ----
