#57. organize mongodb database usage

--- a/src/docs/howto-start-docker.adoc
+++ b/src/docs/howto-start-docker.adoc
@@ -14,17 +14,17 @@ Following environment variable are available for global service configuration:
 
 INGEST_VK_DEFAULT_SEED_ID - initial vk id to use if data file is empty
 
-INGEST_VK_MONGO_DATABASE_NAME - mongodb database name to use (default is vkIngested)
+MONGO_DATABASE_NAME - mongodb database name to use (default is vuzoll)
 
-INGEST_VK_MONGO_AUTH_DATABASE_NAME - mongodb database name used for authentication (default is admin)
+MONGO_AUTH_DATABASE_NAME - mongodb database name used for authentication (default is admin)
 
-INGEST_VK_MONGO_HOST - host of mongodb instance (default is vuzoll_mongo)
+MONGO_HOST - host of mongodb instance (default is vuzoll_mongo)
 
-INGEST_VK_MONGO_PORT - port of mongodb instance (default is 27017)
+MONGO_PORT - port of mongodb instance (default is 27017)
 
-INGEST_VK_MONGO_USERNAME - username for authentication to mongodb (default is ingestVkService)
+MONGO_USERNAME - username for authentication to mongodb (default is ingestVkService)
 
-INGEST_VK_MONGO_PASSWORD - password for authentication to mongodb
+MONGO_PASSWORD - password for authentication to mongodb
 
 INGEST_VK_REQUEST_SIZE - number of records to ingest in one request (default is 1000)
 
@@ -37,7 +37,7 @@ INGEST_VK_VUZOLL_LOG_LEVEL - logging level for service code (default is INFO)
 [source,shell]
 ----
 docker pull vuzoll/vuzoll-ingest-vk-data:$TAG
-docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
+docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /logs:/logs -e MONGO_PASSWORD=MONGODB_PASSWORD -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
 ----
 
 == Authorized start
@@ -52,5 +52,5 @@ If you want to authorize your VK API access to be able to ingest secured data do
 [source,shell]
 ----
 docker pull vuzoll/vuzoll-ingest-vk-data:$TAG
-docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /logs:/logs -e INGEST_VK_MONGO_PASSWORD=MONGODB_PASSWORD -e INGEST_VK_ACCESS_TOKEN=ACCESS_ID -e INGEST_VK_USER_ID=USER_ID -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
+docker run -dit --name vuzoll_ingest_vk_data --link vuzoll_mongo -v /logs:/logs -e MONGO_PASSWORD=MONGODB_PASSWORD -e INGEST_VK_ACCESS_TOKEN=ACCESS_ID -e INGEST_VK_USER_ID=USER_ID -p 8080:8080 vuzoll/vuzoll-ingest-vk-data:$TAG
 ----
