--- a/src/docs/mongodb-setup.adoc
+++ b/src/docs/mongodb-setup.adoc
@@ -4,7 +4,7 @@
 
 [source,shell]
 ----
-docker ps
+docker ps -a
 docker kill vuzoll_mongo; docker rm vuzoll_mongo
 ----
 
@@ -58,14 +58,14 @@ docker run -it --rm --link vuzoll_mongo:mongo mongo:3.4.1 mongo -u vuzollAdmin -
 
 [source,shell]
 ----
-docker run -it --rm --link vuzoll_mongo:mongo mongo:3.4.1 mongo -u ingestVkService -p $PASSWORD --authenticationDatabase admin vuzoll_mongo/vkIngested
+docker run -it --rm --link vuzoll_mongo:mongo mongo:3.4.1 mongo -u ingestVkService -p $PASSWORD --authenticationDatabase admin vuzoll_mongo/vuzoll
 ----
 
 == Setup indexes
 
 [source,shell]
 ----
-docker run -it --rm --link vuzoll_mongo:mongo mongo:3.4.1 mongo -u ingestVkService -p $PASSWORD --authenticationDatabase admin vuzoll_mongo/vkIngested
+docker run -it --rm --link vuzoll_mongo:mongo mongo:3.4.1 mongo -u ingestVkService -p $PASSWORD --authenticationDatabase admin vuzoll_mongo/vuzoll
 ----
 
 [source,shell]
