#66. do not load friends for unaccepted profiles

--- a/src/docs/howto-run-service.adoc
+++ b/src/docs/howto-run-service.adoc
@@ -15,7 +15,8 @@ Following parameters are available for POST body:
   "dataSizeLimit": 300,
   "parameters": {
     "seedId": 123456789
-    "seedGroupsIds": "group1,group2"
+    "seedGroupsIds": "group1,group2",
+    "universityIdsToAccept": "1,2,3"
   }
 }
 ----
